# rgc-subunit-classifier

./: .gitignore  README.md  Subunit_NN_(Manuscript).py  analyze_subunits.py  environment.yaml  fitellipse.py  generate_training_data.py  pyproject.toml  requirements.txt  run_pipeline.py  sta_model_predictions.py  subunit_classifier.py  subunit_model_predictions.py
data/: cell_data_01_NC.mat
data/stimulus_data/: stim_frz.h5
docs/: data.md  installation.md  legacy_notebook_audit.md  methods.md  workflows.md
results/classifier_performances/: Cell 0, 10 Nodes Predictions.h5  Cell 0, 100 Nodes Predictions.h5  Cell 0, 20 Nodes Predictions.h5  Cell 0, 30 Nodes Predictions.h5  Cell 0, 40 Nodes Predictions.h5  Cell 0, 50 Nodes Predictions.h5  Cell 0, 60 Nodes Predictions.h5  Cell 0, 7 Nodes Predictions.h5  Cell 0, 70 Nodes Predictions.h5  Cell 0, 80 Nodes Predictions.h5  Cell 0, 90 Nodes Predictions.h5  Correct Shuffled Stable Subunit Model Performances Across All Cells.h5  Shuffled Stable Subunit Model Performances Across All Cells.h5  Stable Subunit Model Performances Across All Cells.h5  Subunit Model Performances Across All Cells.h5  Subunit Model Performances Across L1 Coeffs.h5  (+13 more)
scripts/: demo_autoencoder_model_comparison.ipynb  demo_autoencoder_model_comparison.py  demo_classifier_model_comparison.ipynb  demo_classifier_model_comparison.py  run_data_fraction_sweep.py  run_hyperparameter_sweep.py  smoke_real_data.py
tests/: test_analysis.py  test_autoencoder.py  test_model.py  test_model_comparison.py  test_stnmf_adapter.py  test_sweeps.py  test_training_data.py
(+6932 files in other folders)
